--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 body{
-    background: linear-gradient(89deg, #FF5EDF,#04C8DE 100%);
+    background: linear-gradient(90deg, #e1e0e0, #060842 100%);
+    color: #e1e0e0;
 }
