--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   text-align: center;
 }
 
+#particles{
+  z-index: 1;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -43,4 +47,8 @@
 
 .container{
   width: 70%
+}
+
+.index{
+  z-index: 1;
 }
