--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,16 @@
   text-align: center;
 }
 
-#particles{
-  z-index: 1;
+#particle{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left:0;
+  z-index: -999;
 }
+
+
 
 .logo {
   height: 6em;
